# fast-subscription_service

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: main.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: edecc7539e18_add_currency_to_tier_model.py  f772f4b5139a_create_models_for_subscription_and_tier.py
app/api/: dependencies.py
app/api/routers/: internal.py  subscription.py  tier.py
app/core/: config.py  database.py  kafka_client.py
app/models/: subscription.py  tier.py
app/schemas/: kafka_events.py  subscription.py  tier.py
