[project]
name = "subscription-service"
version = "0.1.1"
description = "Subscription service for Boosty Clone"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "confluent-kafka>=2.10.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "auth-lib @ git+https://github.com/fotapol/auth-lib.git@main",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.21.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5", # For testing async code
    "ruff>=0.11.2",           # Linter/Formatter
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "PL", "T20"] # Example selection, customize as needed
ignore = []

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"app/alembic/**/*" = ["E501", "E402", "F401"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
version_source = "tag"
commit_version_number = true
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): bump version to v{version}"
commit_parser_options = { conventional_commits_version = "0.1.0" }
major_on_breaking = true
hvcs = "github"
